Fixed traffic-graphic.svg typo

--- a/tntapi/example/web-monitor/index.html
+++ b/tntapi/example/web-monitor/index.html
@@ -30,7 +30,7 @@ div.desc {
 <div class="gallery">
   <div class="desc">Setup</div>
   <a target="_blank" href="traffic-graphic.svg">
-    <img src="traphic-graphic.svg" alt="Setup" width="900" height="400">
+    <img src="traffic-graphic.svg" alt="Setup" width="900" height="400">
   </a>
 </div>
 <div class="gallery">
