Added camera image display based on lsi-camera.yang

--- a/tntapi/example/web-monitor/index.html
+++ b/tntapi/example/web-monitor/index.html
@@ -49,6 +49,10 @@ div.desc {
   <div class="desc">diff-net.txt</div>
   <iframe src="diff-net.txt" alt="diff-net output" style='height: 100%; width: 100%;' frameborder="0" scrolling="yes" id="iframe"></iframe>
 </div>
+<div class="gallery">
+  <div class="desc">Cameras</div>
+  <iframe src="cameras.html" alt="cameras" style='height: 100%; width: 100%;' frameborder="0" scrolling="yes" id="iframe"></iframe>
+</div>
  <form action="/" method=POST enctype="multipart/form-data">
   Network config:<br>
   <input type="hidden" id="cmd-id" name="cmd" value="set-net">
